# Team_3

./: CMakeLists.txt  Doxyfile  README.md
src/: allele.cpp  allele.h  fastareader.cpp  fastareader.h  main.cpp
